--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-	"name": "n8n-nodes-kimiyiAI",
+	"name": "n8n-nodes-kimiyiai",
 	"version": "0.1.0",
 	"description": "connect your N8N with Kimiyi!",
 	"license": "MIT",
-	"homepage": "",
+	"homepage": "https://github.com/kimiyi-ai/Kimiyi_N8N#readme",
 	"keywords": [
 		"n8n-community-node-package"
 	],
-	"author": {
-		"name": "KimiyiAI",
-		"email": "support@kimiyi.ai"
-	},
+	"author": {"name":"KimiyiAI"},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/kimiyi-ai/Kimiyi_N8N.git"
+		"url": "git+https://github.com/kimiyi-ai/Kimiyi_N8N.git"
 	},
 	"scripts": {
 		"build": "n8n-node build",
@@ -51,5 +48,349 @@
 	},
 	"peerDependencies": {
 		"n8n-workflow": "*"
+	},
+	"main": ".prettierrc.js",
+	"dependencies": {
+		"acorn": "^8.15.0",
+		"acorn-jsx": "^5.3.2",
+		"agent-base": "^7.1.4",
+		"ajv": "^6.12.6",
+		"ansi-escapes": "^4.3.2",
+		"ansi-regex": "^6.2.2",
+		"ansi-styles": "^4.3.0",
+		"ansis": "^3.17.0",
+		"argparse": "^2.0.1",
+		"array-union": "^2.1.0",
+		"assert": "^2.1.0",
+		"ast-types": "^0.15.2",
+		"async": "^3.2.6",
+		"async-retry": "^1.3.3",
+		"asynckit": "^0.4.0",
+		"available-typed-arrays": "^1.0.7",
+		"balanced-match": "^1.0.2",
+		"basic-ftp": "^5.0.5",
+		"before-after-hook": "^4.0.0",
+		"brace-expansion": "^2.0.2",
+		"braces": "^3.0.3",
+		"bundle-name": "^4.1.0",
+		"c12": "^3.3.0",
+		"call-bind": "^1.0.8",
+		"call-bind-apply-helpers": "^1.0.2",
+		"call-bound": "^1.0.4",
+		"callsites": "^3.1.0",
+		"camel-case": "^4.1.2",
+		"chalk": "^4.1.2",
+		"change-case": "^5.4.4",
+		"chardet": "^2.1.0",
+		"charenc": "^0.0.2",
+		"chokidar": "^4.0.3",
+		"ci-info": "^4.3.1",
+		"citty": "^0.1.6",
+		"clean-stack": "^3.0.1",
+		"cli-cursor": "^5.0.0",
+		"cli-spinners": "^2.9.2",
+		"cli-width": "^4.1.0",
+		"cliui": "^8.0.1",
+		"code-block-writer": "^13.0.3",
+		"color-convert": "^2.0.1",
+		"color-name": "^1.1.4",
+		"combined-stream": "^1.0.8",
+		"comment-parser": "^1.4.1",
+		"concat-map": "^0.0.1",
+		"confbox": "^0.2.2",
+		"consola": "^3.4.2",
+		"cross-spawn": "^7.0.6",
+		"crypt": "^0.0.2",
+		"data-uri-to-buffer": "^6.0.2",
+		"debug": "^4.4.3",
+		"deep-is": "^0.1.4",
+		"default-browser": "^5.2.1",
+		"default-browser-id": "^5.0.0",
+		"define-data-property": "^1.1.4",
+		"define-lazy-prop": "^3.0.0",
+		"define-properties": "^1.2.1",
+		"defu": "^6.1.4",
+		"degenerator": "^5.0.1",
+		"delayed-stream": "^1.0.0",
+		"destr": "^2.0.5",
+		"dir-glob": "^3.0.1",
+		"doctrine": "^3.0.0",
+		"dotenv": "^17.2.3",
+		"dunder-proto": "^1.0.1",
+		"eastasianwidth": "^0.2.0",
+		"ejs": "^3.1.10",
+		"emoji-regex": "^8.0.0",
+		"es-define-property": "^1.0.1",
+		"es-errors": "^1.3.0",
+		"es-object-atoms": "^1.1.1",
+		"escalade": "^3.2.0",
+		"escape-string-regexp": "^4.0.0",
+		"escodegen": "^2.1.0",
+		"eslint-config-riot": "^1.0.0",
+		"eslint-import-context": "^0.1.9",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import-x": "^4.16.1",
+		"eslint-plugin-local": "^1.0.0",
+		"eslint-plugin-n8n-nodes-base": "^1.16.3",
+		"eslint-scope": "^8.4.0",
+		"eslint-visitor-keys": "^3.4.3",
+		"espree": "^10.4.0",
+		"esprima": "^4.0.1",
+		"esprima-next": "^5.8.4",
+		"esquery": "^1.6.0",
+		"esrecurse": "^4.3.0",
+		"estraverse": "^5.3.0",
+		"esutils": "^2.0.3",
+		"eta": "^4.0.1",
+		"execa": "^8.0.1",
+		"exsolve": "^1.0.7",
+		"fast-content-type-parse": "^3.0.0",
+		"fast-deep-equal": "^3.1.3",
+		"fast-glob": "^3.2.12",
+		"fast-json-stable-stringify": "^2.1.0",
+		"fast-levenshtein": "^2.0.6",
+		"fastest-levenshtein": "^1.0.16",
+		"fastq": "^1.19.1",
+		"file-entry-cache": "^8.0.0",
+		"filelist": "^1.0.4",
+		"fill-range": "^7.1.1",
+		"find-up": "^5.0.0",
+		"flat-cache": "^4.0.1",
+		"flatted": "^3.3.3",
+		"for-each": "^0.3.5",
+		"foreground-child": "^3.3.1",
+		"form-data": "^4.0.0",
+		"fs.realpath": "^1.0.0",
+		"function-bind": "^1.1.2",
+		"generator-function": "^2.0.1",
+		"get-caller-file": "^2.0.5",
+		"get-east-asian-width": "^1.4.0",
+		"get-intrinsic": "^1.3.0",
+		"get-package-type": "^0.1.0",
+		"get-proto": "^1.0.1",
+		"get-stream": "^8.0.1",
+		"get-tsconfig": "^4.12.0",
+		"get-uri": "^6.0.5",
+		"giget": "^2.0.0",
+		"git-up": "^8.1.1",
+		"git-url-parse": "^16.1.0",
+		"glob": "^11.1.0",
+		"glob-parent": "^6.0.2",
+		"globals": "^14.0.0",
+		"globby": "^11.1.0",
+		"gopd": "^1.2.0",
+		"graphemer": "^1.4.0",
+		"handlebars": "^4.7.8",
+		"has-flag": "^4.0.0",
+		"has-property-descriptors": "^1.0.2",
+		"has-symbols": "^1.1.0",
+		"has-tostringtag": "^1.0.2",
+		"hasown": "^2.0.2",
+		"http-proxy-agent": "^7.0.2",
+		"https-proxy-agent": "^7.0.6",
+		"human-signals": "^5.0.0",
+		"iconv-lite": "^0.7.0",
+		"ignore": "^5.3.2",
+		"import-fresh": "^3.3.1",
+		"imurmurhash": "^0.1.4",
+		"indefinite": "^2.5.2",
+		"indent-string": "^4.0.0",
+		"inflight": "^1.0.6",
+		"inherits": "^2.0.4",
+		"inquirer": "^12.9.6",
+		"ip-address": "^10.0.1",
+		"is-arguments": "^1.2.0",
+		"is-buffer": "^1.1.6",
+		"is-bun-module": "^2.0.0",
+		"is-callable": "^1.2.7",
+		"is-docker": "^2.2.1",
+		"is-extglob": "^2.1.1",
+		"is-fullwidth-code-point": "^3.0.0",
+		"is-generator-function": "^1.1.2",
+		"is-glob": "^4.0.3",
+		"is-inside-container": "^1.0.0",
+		"is-interactive": "^2.0.0",
+		"is-nan": "^1.3.2",
+		"is-number": "^7.0.0",
+		"is-path-inside": "^3.0.3",
+		"is-regex": "^1.2.1",
+		"is-ssh": "^1.4.1",
+		"is-stream": "^3.0.0",
+		"is-typed-array": "^1.1.15",
+		"is-unicode-supported": "^2.1.0",
+		"is-wsl": "^2.2.0",
+		"isexe": "^2.0.0",
+		"issue-parser": "^7.0.1",
+		"jackspeak": "^4.1.1",
+		"jake": "^10.9.4",
+		"jiti": "^2.6.1",
+		"jmespath": "^0.16.0",
+		"js-base64": "^3.7.2",
+		"js-yaml": "^4.1.1",
+		"json-buffer": "^3.0.1",
+		"json-schema-traverse": "^0.4.1",
+		"json-stable-stringify-without-jsonify": "^1.0.1",
+		"jssha": "^3.3.1",
+		"keyv": "^4.5.4",
+		"kleur": "^3.0.3",
+		"levn": "^0.4.1",
+		"lilconfig": "^3.1.3",
+		"locate-path": "^6.0.0",
+		"lodash": "^4.17.21",
+		"lodash.capitalize": "^4.2.1",
+		"lodash.escaperegexp": "^4.1.2",
+		"lodash.isplainobject": "^4.0.6",
+		"lodash.isstring": "^4.0.1",
+		"lodash.merge": "^4.6.2",
+		"lodash.uniqby": "^4.7.0",
+		"log-symbols": "^7.0.1",
+		"lower-case": "^2.0.2",
+		"lru-cache": "^7.18.3",
+		"luxon": "^3.4.4",
+		"macos-release": "^3.4.0",
+		"math-intrinsics": "^1.1.0",
+		"md5": "^2.3.0",
+		"merge-stream": "^2.0.0",
+		"merge2": "^1.4.1",
+		"micromatch": "^4.0.8",
+		"mime-db": "^1.52.0",
+		"mime-types": "^2.1.35",
+		"mimic-fn": "^4.0.0",
+		"mimic-function": "^5.0.1",
+		"minimatch": "^9.0.5",
+		"minimist": "^1.2.8",
+		"minipass": "^7.1.2",
+		"ms": "^2.1.3",
+		"mute-stream": "^2.0.0",
+		"n8n-workflow": "^1.113.0",
+		"napi-postinstall": "^0.3.4",
+		"natural-compare": "^1.4.0",
+		"neo-async": "^2.6.2",
+		"netmask": "^2.0.2",
+		"new-github-release-url": "^2.0.0",
+		"no-case": "^3.0.4",
+		"node-fetch-native": "^1.6.7",
+		"npm-run-path": "^5.3.0",
+		"nypm": "^0.6.2",
+		"object-is": "^1.1.6",
+		"object-keys": "^1.1.1",
+		"object.assign": "^4.1.7",
+		"ohash": "^2.0.11",
+		"once": "^1.4.0",
+		"onetime": "^7.0.0",
+		"open": "^10.2.0",
+		"optionator": "^0.9.4",
+		"ora": "^9.0.0",
+		"os-name": "^6.1.0",
+		"p-limit": "^3.1.0",
+		"p-locate": "^5.0.0",
+		"pac-proxy-agent": "^7.2.0",
+		"pac-resolver": "^7.0.1",
+		"package-json-from-dist": "^1.0.1",
+		"parent-module": "^1.0.1",
+		"parse-path": "^7.1.0",
+		"parse-url": "^9.2.0",
+		"pascal-case": "^3.1.2",
+		"path-browserify": "^1.0.1",
+		"path-exists": "^4.0.0",
+		"path-is-absolute": "^1.0.1",
+		"path-key": "^3.1.1",
+		"path-scurry": "^2.0.0",
+		"path-type": "^4.0.0",
+		"pathe": "^2.0.3",
+		"perfect-debounce": "^2.0.0",
+		"picocolors": "^1.0.1",
+		"picomatch": "^2.3.1",
+		"pkg-types": "^2.3.0",
+		"pluralize": "^8.0.0",
+		"possible-typed-array-names": "^1.1.0",
+		"prelude-ls": "^1.2.1",
+		"prompts": "^2.4.2",
+		"protocols": "^2.0.2",
+		"proxy-agent": "^6.5.0",
+		"proxy-from-env": "^1.1.0",
+		"punycode": "^2.3.1",
+		"queue-microtask": "^1.2.3",
+		"rc9": "^2.1.2",
+		"readdirp": "^4.1.2",
+		"recast": "^0.22.0",
+		"require-directory": "^2.1.1",
+		"resolve-from": "^4.0.0",
+		"resolve-pkg-maps": "^1.0.0",
+		"restore-cursor": "^5.1.0",
+		"retry": "^0.13.1",
+		"reusify": "^1.1.0",
+		"rimraf": "^6.0.1",
+		"run-applescript": "^7.1.0",
+		"run-async": "^4.0.6",
+		"run-parallel": "^1.2.0",
+		"rxjs": "^7.8.2",
+		"safe-regex-test": "^1.1.0",
+		"safer-buffer": "^2.1.2",
+		"sax": "^1.4.1",
+		"semver": "^7.7.3",
+		"sentence-case": "^3.0.4",
+		"set-function-length": "^1.2.2",
+		"shebang-command": "^2.0.0",
+		"shebang-regex": "^3.0.0",
+		"signal-exit": "^4.1.0",
+		"sisteransi": "^1.0.5",
+		"slash": "^3.0.0",
+		"smart-buffer": "^4.2.0",
+		"socks": "^2.8.7",
+		"socks-proxy-agent": "^8.0.5",
+		"source-map": "^0.6.1",
+		"stable-hash-x": "^0.2.0",
+		"stdin-discarder": "^0.2.2",
+		"string-width": "^4.2.3",
+		"string-width-cjs": "^4.2.3",
+		"strip-ansi": "^7.1.2",
+		"strip-ansi-cjs": "^6.0.1",
+		"strip-final-newline": "^3.0.0",
+		"strip-json-comments": "^3.1.1",
+		"supports-color": "^8.1.1",
+		"text-table": "^0.2.0",
+		"tinyexec": "^1.0.1",
+		"tinyglobby": "^0.2.15",
+		"title-case": "^3.0.3",
+		"to-regex-range": "^5.0.1",
+		"transliteration": "^2.3.5",
+		"ts-api-utils": "^2.1.0",
+		"ts-morph": "^26.0.0",
+		"tslib": "^2.8.1",
+		"type-check": "^0.4.0",
+		"type-fest": "^0.21.3",
+		"typescript-eslint": "^8.46.1",
+		"uglify-js": "^3.19.3",
+		"undici": "^6.21.3",
+		"universal-user-agent": "^7.0.3",
+		"unrs-resolver": "^1.11.1",
+		"upper-case-first": "^2.0.2",
+		"uri-js": "^4.4.1",
+		"url-join": "^5.0.0",
+		"util": "^0.12.5",
+		"which": "^2.0.2",
+		"which-typed-array": "^1.1.19",
+		"widest-line": "^3.1.0",
+		"wildcard-match": "^5.1.4",
+		"windows-release": "^6.1.0",
+		"word-wrap": "^1.2.5",
+		"wordwrap": "^1.0.0",
+		"wrap-ansi": "^7.0.0",
+		"wrap-ansi-cjs": "^7.0.0",
+		"wrappy": "^1.0.2",
+		"wsl-utils": "^0.1.0",
+		"xml2js": "^0.6.2",
+		"xmlbuilder": "^11.0.1",
+		"y18n": "^5.0.8",
+		"yargs": "^17.7.2",
+		"yargs-parser": "^21.1.1",
+		"yocto-queue": "^0.1.0",
+		"yoctocolors": "^2.1.2",
+		"yoctocolors-cjs": "^2.1.3",
+		"zod": "^3.25.67"
+	},
+	"bugs": {
+		"url": "https://github.com/kimiyi-ai/Kimiyi_N8N/issues"
 	}
 }
