--- a/package.json
+++ b/package.json
@@ -265,7 +265,8 @@
 		"minipass": "^7.1.2",
 		"ms": "^2.1.3",
 		"mute-stream": "^2.0.0",
-		"n8n-workflow": "^1.113.0",
+		"n8n-nodes-kimiyiai": "^0.1.2",
+		"n8n-workflow": "*",
 		"napi-postinstall": "^0.3.4",
 		"natural-compare": "^1.4.0",
 		"neo-async": "^2.6.2",
