--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.2",
 	"description": "connect your N8N with Kimiyi!",
 	"license": "MIT",
+	"type": "module", 
 	"homepage": "https://github.com/kimiyi-ai/Kimiyi_N8N#readme",
 	"keywords": [
 		"n8n-community-node-package"
